# ocap-recorder

./: APPLY_PATCH.md  README.md  apply_patch.sh  pull.sh  pulled_version_info.txt
.github/workflows/: release.yml
projects/ocap/: pyproject.toml
projects/ocap/owa/ocap/: recorder.py
scripts/release/ocap/: run.bat
