[project]
name = "ocap"
version = "0.5.7"
description = "High-performance, omnimodal desktop recorder for Windows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "owa-cli==0.5.7",
    "owa-env-desktop==0.5.7",
    "owa-env-gst==0.5.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["owa"]

[project.scripts]
ocap = "owa.ocap.recorder:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
